# librtlsdr

include/: rtl-sdr.h
src/: CMakeLists.txt  Makefile.am
